Implement OS Version reconcile
