# internal/api/types.go
@@ -7,6 +7,7 @@ import (
 	"golang.org/x/exp/maps"
 	corev1 "k8s.io/api/core/v1"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
+	"k8s.io/apimachinery/pkg/runtime"
 	clusterv1 "sigs.k8s.io/cluster-api/api/v1beta1"
 
 	"sigs.k8s.io/cluster-api/util/conditions"
@@ -56,11 +57,12 @@ type HostPatchRequest struct {
 	RegistrationName string `path:"registrationName"`
 	HostName         string `path:"hostName"`
 
-	Annotations  map[string]string `json:"annotations,omitempty"`
-	Labels       map[string]string `json:"labels,omitempty"`
-	Bootstrapped *bool             `json:"bootstrapped,omitempty"`
-	Installed    *bool             `json:"installed,omitempty"`
-	Reset        *bool             `json:"reset,omitempty"`
+	Annotations    map[string]string `json:"annotations,omitempty"`
+	Labels         map[string]string `json:"labels,omitempty"`
+	Bootstrapped   *bool             `json:"bootstrapped,omitempty"`
+	Installed      *bool             `json:"installed,omitempty"`
+	Reset          *bool             `json:"reset,omitempty"`
+	InPlaceUpgrade *string           `json:"inPlaceUpgrade,omitempty"`
 
 	Condition *clusterv1.Condition        `json:"condition,omitempty"`
 	Phase     *infrastructurev1.HostPhase `json:"phase,omitempty"`
@@ -95,6 +97,9 @@ func (h *HostPatchRequest) applyToElementalHost(elementalHost *infrastructurev1.
 	if h.Reset != nil {
 		elementalHost.Labels[infrastructurev1.LabelElementalHostReset] = "true"
 	}
+	if h.InPlaceUpgrade != nil {
+		elementalHost.Labels[infrastructurev1.LabelElementalHostInPlaceUpgrade] = *h.InPlaceUpgrade
+	}
 	if elementalHost.Status.Conditions == nil {
 		elementalHost.Status.Conditions = clusterv1.Conditions{}
 	}
@@ -109,13 +114,15 @@ func (h *HostPatchRequest) applyToElementalHost(elementalHost *infrastructurev1.
 }
 
 type HostResponse struct {
-	Name           string            `json:"name,omitempty"`
-	Annotations    map[string]string `json:"annotations,omitempty"`
-	Labels         map[string]string `json:"labels,omitempty"`
-	BootstrapReady bool              `json:"bootstrapReady,omitempty"`
-	Bootstrapped   bool              `json:"bootstrapped,omitempty"`
-	Installed      bool              `json:"installed,omitempty"`
-	NeedsReset     bool              `json:"needsReset,omitempty"`
+	Name                string                          `json:"name,omitempty"`
+	Annotations         map[string]string               `json:"annotations,omitempty"`
+	Labels              map[string]string               `json:"labels,omitempty"`
+	BootstrapReady      bool                            `json:"bootstrapReady,omitempty"`
+	Bootstrapped        bool                            `json:"bootstrapped,omitempty"`
+	Installed           bool                            `json:"installed,omitempty"`
+	NeedsReset          bool                            `json:"needsReset,omitempty"`
+	InPlaceUpgrade      string                          `json:"inPlaceUpgrade,omitempty"`
+	OSVersionManagement map[string]runtime.RawExtension `json:"osVersionManagement,omitempty" yaml:"osVersionManagement,omitempty"`
 }
 
 func (h *HostResponse) fromElementalHost(elementalHost infrastructurev1.ElementalHost) {
@@ -136,6 +143,10 @@ func (h *HostResponse) fromElementalHost(elementalHost infrastructurev1.Elementa
 	if value, found := elementalHost.Labels[infrastructurev1.LabelElementalHostNeedsReset]; found && value == "true" {
 		h.NeedsReset = true
 	}
+	if value, found := elementalHost.Labels[infrastructurev1.LabelElementalHostInPlaceUpgrade]; found {
+		h.InPlaceUpgrade = value
+	}
+	h.OSVersionManagement = elementalHost.Spec.OSVersionManagement
 }
 
 type RegistrationGetRequest struct {
